Add Json decoder/encoder macros